--- a/TxTLauncher/app/src/main/res/layout/activity_widget.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_widget.xml
@@ -63,7 +63,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:id="@+id/buttonsFrame"
+                android:id="@+id/buttonsFrame1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
