--- a/TxTLauncher/app/src/main/res/layout/activity_favorites_addapp.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_favorites_addapp.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="closeFavAppSelButton"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,6 +31,18 @@
                     android:text="@string/title_favorite_addapp"
                     android:textAlignment="gravity"
                     android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
+                    android:id="@+id/addFavAppInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@android:color/transparent"
+                    android:text=""
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent" />
 
         </LinearLayout>
