--- a/TxTLauncher/app/src/main/res/layout/activity_add_app.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_add_app.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="closeAddAppButton"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +21,7 @@
         <TextView
             android:id="@+id/addappTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -29,9 +30,21 @@
             android:drawablePadding="4dp"
             android:text="@string/title_home_addapp"
             android:textAlignment="gravity"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/addappInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@android:color/transparent"
+            android:gravity="center_vertical"
+            android:drawablePadding="4dp"
+            android:text=""
+            android:textAlignment="center"
+            tools:ignore="DuplicateIds,RtlCompat" />
 
     </LinearLayout>
 
