--- a/TxTLauncher/app/src/main/res/layout/activity_main.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:gravity="start"
             android:paddingStart="0dp"
             android:paddingEnd="20dp"
-            android:layout_weight="4"
+            android:layout_weight="8"
             tools:ignore="MissingConstraints">
 
             <TextView
@@ -78,14 +78,14 @@
             android:orientation="vertical"
             android:gravity="end"
             android:layout_weight="1"
-            android:paddingTop="16dp"
+            android:paddingTop="24dp"
             android:paddingBottom="5dp"
             tools:ignore="MissingConstraints">
 
             <ImageView
                 android:id="@+id/weatherButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
@@ -97,9 +97,9 @@
 
             <ImageView
                 android:id="@+id/searchButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button_search"
@@ -116,14 +116,14 @@
             android:orientation="vertical"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingTop="16dp"
+            android:paddingTop="24dp"
             android:paddingBottom="5dp"
-            tools:ignore="MissingConstraints">
+            tools:ignore="MissingConstraints,RtlSymmetry">
 
             <ImageView
                 android:id="@+id/settingsButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
@@ -135,9 +135,9 @@
 
             <ImageView
                 android:id="@+id/mapButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button_aiapp"
