--- a/TxTLauncher/app/src/main/res/layout/activity_main.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_main.xml
@@ -32,121 +32,92 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
+        android:paddingTop="20dp"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         android:paddingBottom="5dp"
         tools:ignore="DisableBaselineAlignment,MissingConstraints">
 
-        <LinearLayout
-            android:id="@+id/lLayout1_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="start"
-            android:paddingStart="0dp"
-            android:paddingEnd="20dp"
-            android:layout_weight="8"
-            tools:ignore="MissingConstraints">
-
             <TextView
                 android:id="@+id/digitalClock"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="openClock"
-                android:textAlignment="center"
-                android:textSize="60sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:gravity="start"
+                android:textAlignment="gravity"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/digitalDate"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="openClock"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="@id/digitalClock"
-                app:layout_constraintTop_toBottomOf="@id/digitalClock" />
-
-        </LinearLayout>
+                android:gravity="start"
+                android:textAlignment="gravity"
+                android:textStyle="bold" />
+    </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/lLayout1_2"
-            android:layout_width="wrap_content"
+            android:id="@+id/lLayout2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="end"
-            android:layout_weight="1"
-            android:paddingTop="24dp"
+            android:orientation="horizontal"
+            android:paddingTop="16dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
             android:paddingBottom="5dp"
-            tools:ignore="MissingConstraints">
-
-            <ImageView
-                android:id="@+id/weatherButton"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/button_weather"
-                android:onClick="openWeatherSearch"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/weather" />
+            android:gravity="end"
+            app:layout_constraintTop_toBottomOf="@id/lLayout1"
+            tools:ignore="DisableBaselineAlignment,MissingConstraints">
 
             <ImageView
                 android:id="@+id/searchButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button_search"
                 android:onClick="startSearch"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/search" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/lLayout1_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingTop="24dp"
-            android:paddingBottom="5dp"
-            tools:ignore="MissingConstraints,RtlSymmetry">
+            <ImageView
+                android:id="@+id/weatherButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="0dp"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/button_weather"
+                android:onClick="openWeatherSearch"
+                android:gravity="center"
+                app:srcCompat="@drawable/weather" />
 
             <ImageView
                 android:id="@+id/settingsButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button_settings"
                 android:onClick="openAndroidSystemSettings"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/settings" />
 
             <ImageView
                 android:id="@+id/mapButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="0dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/button_aiapp"
                 android:onClick="openAI"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ai_star" />
 
-        </LinearLayout>
     </LinearLayout>
 
     <View
