--- a/TxTLauncher/app/src/main/res/layout/activity_settings.xml
+++ b/TxTLauncher/app/src/main/res/layout/activity_settings.xml
@@ -181,6 +181,33 @@
                 app:layout_constraintTop_toBottomOf="@+id/urlSearch" />
 
             <TextView
+                android:id="@+id/weatherLink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/settings_title_weather"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editUrlSearch" />
+
+            <EditText
+                android:id="@+id/editWeatherLink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:autofillHints=""
+                android:hint="@string/settings_title_weather"
+                android:inputType="textMultiLine"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />
+
+            <TextView
                 android:id="@+id/backgroundImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
